# mandelbrot

./: CMakeLists.txt  README.md
mandelbrot/: CMakeLists.txt
mandelbrot/include/: BitMapInfoHeader.h  Bitmap.h  BitmapFileHeader.h  FractalCreator.h  Mandelbrot.h  RGB.h  Zoom.h  ZoomList.h
mandelbrot/src/: Bitmap.cpp  FractalCreator.cpp  Mandelbrot.cpp  RGB.cpp  ZoomList.cpp  main.cpp
